// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail if asserting second order index 1`] = `
Array [
  Array [
    Object {
      "id": "7",
      "name": undefined,
      "passed": false,
      "results": Array [
        Object {
          "metrics": Object {
            "domContentLoaded": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 877,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 877,
                "new_regime": 0,
                "r": 877,
                "u": 877,
              },
              "metric": "domContentLoaded",
              "passed": true,
              "value": 877,
            },
            "firstContentfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstContentfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstInteractive": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstInteractive",
              "passed": true,
              "value": 1092,
            },
            "firstMeaningfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstMeaningfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstPaint",
              "passed": true,
              "value": 1092,
            },
            "load": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1837,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1837,
                "new_regime": 0,
                "r": 1837,
                "u": 1837,
              },
              "metric": "load",
              "passed": true,
              "value": 1837,
            },
            "score": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 0.822559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 0.802559999996,
                "new_regime": 0,
                "r": 0.832559999996,
                "u": 0.852559999996,
              },
              "metric": "score",
              "passed": false,
              "value": 0.7762316436535074,
            },
            "speedIndex": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1142.802559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1141.802559999996,
                "new_regime": 0,
                "r": 1142.802559999996,
                "u": 1144.802559999996,
              },
              "metric": "speedIndex",
              "passed": true,
              "value": 0,
            },
          },
          "orderIndex": 1,
          "passed": false,
          "url": "http://saucelabs-slow.com/",
        },
      ],
      "url": "https://saucelabs.com/performance/foobar/0",
    },
    Array [
      "speedIndex",
      "score",
    ],
  ],
]
`;

exports[`should fail if captured values are out of budget 1`] = `
Object {
  "id": "5",
  "name": undefined,
  "passed": false,
  "results": Array [
    Object {
      "metrics": Object {
        "load": Object {
          "baseline": Object {
            "l": 0,
            "u": 1000,
          },
          "metric": "load",
          "passed": false,
          "value": 1837,
        },
        "speedIndex": Object {
          "baseline": Object {
            "l": 500,
            "u": 1000,
          },
          "metric": "speedIndex",
          "passed": false,
          "value": 1143,
        },
      },
      "orderIndex": 0,
      "passed": false,
      "url": "http://saucelabs-fast.com/",
    },
  ],
  "url": "https://saucelabs.com/performance/foobar/0",
}
`;

exports[`should pass if asserting first page url 1`] = `
Array [
  Array [
    Object {
      "id": "6",
      "name": undefined,
      "passed": true,
      "results": Array [
        Object {
          "metrics": Object {
            "domContentLoaded": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 877,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 877,
                "new_regime": 0,
                "r": 877,
                "u": 877,
              },
              "metric": "domContentLoaded",
              "passed": true,
              "value": 877,
            },
            "firstContentfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstContentfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstInteractive": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstInteractive",
              "passed": true,
              "value": 1092,
            },
            "firstMeaningfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstMeaningfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstPaint",
              "passed": true,
              "value": 1092,
            },
            "load": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1837,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1837,
                "new_regime": 0,
                "r": 1837,
                "u": 1837,
              },
              "metric": "load",
              "passed": true,
              "value": 1837,
            },
            "score": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 0.822559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 0.802559999996,
                "new_regime": 0,
                "r": 0.832559999996,
                "u": 0.852559999996,
              },
              "metric": "score",
              "passed": true,
              "value": 0.8362316436535074,
            },
            "speedIndex": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1142.802559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1141.802559999996,
                "new_regime": 0,
                "r": 1142.802559999996,
                "u": 1144.802559999996,
              },
              "metric": "speedIndex",
              "passed": true,
              "value": 1143,
            },
          },
          "orderIndex": 0,
          "passed": true,
          "url": "http://saucelabs-fast.com/",
        },
      ],
      "url": "https://saucelabs.com/performance/foobar/0",
    },
    Array [
      "speedIndex",
      "score",
    ],
  ],
]
`;

exports[`should pass if captured values are within budget 1`] = `
Object {
  "id": "4",
  "name": undefined,
  "passed": true,
  "results": Array [
    Object {
      "metrics": Object {
        "load": Object {
          "baseline": Object {
            "l": 0,
            "u": 2000,
          },
          "metric": "load",
          "passed": true,
          "value": 1837,
        },
        "speedIndex": Object {
          "baseline": Object {
            "l": 1000,
            "u": 1500,
          },
          "metric": "speedIndex",
          "passed": true,
          "value": 1143,
        },
      },
      "orderIndex": 0,
      "passed": true,
      "url": "http://saucelabs-fast.com/",
    },
  ],
  "url": "https://saucelabs.com/performance/foobar/0",
}
`;

exports[`should run without errors 1`] = `
Array [
  Array [],
  Array [
    "Analyze performance of job",
  ],
]
`;

exports[`should run without errors 2`] = `Array []`;

exports[`should run without errors 3`] = `
Array [
  Array [
    Object {
      "id": "9",
      "name": undefined,
      "passed": true,
      "results": Array [
        Object {
          "metrics": Object {
            "domContentLoaded": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 877,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 877,
                "new_regime": 0,
                "r": 877,
                "u": 877,
              },
              "metric": "domContentLoaded",
              "passed": true,
              "value": 877,
            },
            "firstContentfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstContentfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstInteractive": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstInteractive",
              "passed": true,
              "value": 1092,
            },
            "firstMeaningfulPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstMeaningfulPaint",
              "passed": true,
              "value": 1092,
            },
            "firstPaint": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1092,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1092,
                "new_regime": 0,
                "r": 1092,
                "u": 1092,
              },
              "metric": "firstPaint",
              "passed": true,
              "value": 1092,
            },
            "load": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1837,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1837,
                "new_regime": 0,
                "r": 1837,
                "u": 1837,
              },
              "metric": "load",
              "passed": true,
              "value": 1837,
            },
            "score": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 0.822559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 0.802559999996,
                "new_regime": 0,
                "r": 0.832559999996,
                "u": 0.852559999996,
              },
              "metric": "score",
              "passed": true,
              "value": 0.8362316436535074,
            },
            "speedIndex": Object {
              "baseline": Object {
                "accepted": 0,
                "b": 1142.802559999996,
                "datetime": "2019-03-17T17:36:22Z",
                "job_id": "83d526a5d20040a7b854a2cbef64c067",
                "l": 1141.802559999996,
                "new_regime": 0,
                "r": 1142.802559999996,
                "u": 1144.802559999996,
              },
              "metric": "speedIndex",
              "passed": true,
              "value": 1143,
            },
          },
          "orderIndex": 0,
          "passed": true,
          "url": "http://saucelabs.com/",
        },
      ],
      "url": "https://saucelabs.com/performance/foobar/0",
    },
    Array [
      "speedIndex",
      "score",
    ],
  ],
]
`;
